fixed nav-links width and .profile:hover height on mobile

--- a/mobile-styles.scss
+++ b/mobile-styles.scss
@@ -135,8 +135,8 @@ header {
   .profile:hover {
     .text-container {
       background-color: rgba(0, 0, 0, 0.5);
-      height: 71%;
-      top: 29%;
+      height: 85%;
+      top: 15%;
       p {
         display: block;
       }
